# BspatchDemo

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/bspatchdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bsdiff.c  bspatch.c  native.cpp
app/src/main/java/com/example/bspatchdemo/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/bspatchdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
